# RType

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  conanfile.txt  doxyfile
Client/: main.cpp
Client/Core/include/: AEngine.hpp  ClientGraphic.hpp  ClientListener.hpp  Core.hpp  CoreHandler.hpp  EngineCli.hpp  GameComponents.hpp  GameSystems.hpp
Client/Core/src/: AEngine.cpp  ClientListener.cpp  Core.cpp  CoreHandler.cpp  EngineCli.cpp  GameComponents.cpp  GameSystems.cpp
Server/: main.cpp
Server/Engine/include/: ASystem.hpp  Byte.hpp  Commands.hpp  Component.hpp  ComponentType.hpp  Engine.hpp  Entity.hpp  Id.hpp  NetworkPack.hpp  NonCopyable.hpp  Serializable.hpp  System.hpp  SystemType.hpp  World.hpp  WorldHandler.hpp
Server/Engine/src/: ASystem.cpp  Byte.cpp  Entity.cpp  Id.cpp  NetworkPack.cpp  World.cpp
Server/Game/Components/include/: AVector.hpp  Damage.hpp  Drawable.hpp  Enemy.hpp  Life.hpp  Player.hpp  Position.hpp  Size.hpp  Speed.hpp  Texture.hpp  Transform.hpp
Server/Game/Components/src/: AVector.cpp  Damage.cpp  Drawable.cpp  Enemy.cpp  Life.cpp  Player.cpp  Position.cpp  Size.cpp  Speed.cpp  Texture.cpp  Transform.cpp
Server/Game/Systems/include/: ApplyDamages.hpp  ApplyMovement.hpp  Colidable.hpp  Draw.hpp  DrawLife.hpp  EntityKiller.hpp  UpdateAnimation.hpp
Server/Game/Systems/src/: ApplyDamages.cpp  ApplyMovement.cpp  Colidable.cpp  Draw.cpp  DrawLife.cpp  EntityKiller.cpp  UpdateAnimation.cpp
Server/Game/include/: EngineSrv.hpp  Game.hpp  GameHandler.hpp  GameServer.hpp
Server/Game/src/: EngineSrv.cpp  Game.cpp  GameHandler.cpp  GameServer.cpp
Server/Network/include/: BoostServer.hpp  BoostUdp.hpp
Server/Network/src/: BoostServer.cpp  BoostUdp.cpp
include/: AEngine.hpp  AnimatedSprite.hpp  Bullet.hpp  Engine.hpp  Entities.hpp  Parallax.hpp  Player.hpp
src/: AEngine.cpp  AnimatedSprite.cpp  Bullet.cpp  Engine.cpp  Entities.cpp  Parallax.cpp  Player.cpp  main.cpp
